Production/force-app/main/default/objects/Sales_Planner_History__c/Sales_Planner_History__c.object-meta.xml
<CustomObject>
    <label>Sales Planner History</label>
    <nameField>
        <label>Sales Planner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SalesPlannersHistory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>