Production/force-app/main/default/objects/Sales_Planner_History__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <label>Account_ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>