Production/force-app/main/default/objects/Sales_Planner_History__c/fields/Account_Stage__c.field-meta.xml
<CustomField>
    <fullName>Account_Stage__c</fullName>
    <inlineHelpText>Dual Product Loyal:Reorders of Vaxchora and ^25% Vivotif Mkt Share	 
Vaxchora Supporter:Re-ordering Vaxchora; little or no Vivotif usage.  Vivotif Supporter:^25% Vivotif Market Share, and no Vaxchora Usage. Travel Vaccinator	Vaccinate travelers,</inlineHelpText>
    <label>Account Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dual Product Loyal</fullName>
            </value>
            <value>
                <fullName>Vaxchora Supporter</fullName>
            </value>
            <value>
                <fullName>Vivotif Supporter</fullName>
            </value>
            <value>
                <fullName>Travel Vaccinator</fullName>
            </value>
            <value>
                <fullName>PaxVax Naïve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>