Production/force-app/main/default/objects/Sales_Planner_History__c/fields/Billing_address__c.field-meta.xml
<CustomField>
    <fullName>Billing_address__c</fullName>
    <label>Billing address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>