Production/force-app/main/default/objects/Sales_Planner_History__c/fields/Case1__c.field-meta.xml
<CustomField>
    <fullName>Case1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case1</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>SalesPlannersHistory</relationshipLabel>
    <relationshipName>SalesPlannersHistory</relationshipName>
    <type>Lookup</type>
</CustomField>