Production/force-app/main/default/objects/Sales_Planner_History__c/fields/City3__c.field-meta.xml
<CustomField>
    <fullName>City3__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>