Production/force-app/main/default/objects/Sales_Planner_History__c/fields/Contract_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_Date__c</fullName>
    <description>2019 Pricing Program</description>
    <inlineHelpText>Based on signed contract</inlineHelpText>
    <label>Contract Signed Date</label>
    <type>Date</type>
</CustomField>