Production/force-app/main/default/objects/Sales_Planner_History__c/fields/Country3__c.field-meta.xml
<CustomField>
    <fullName>Country3__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>