Production/force-app/main/default/objects/Sales_Planner_History__c/fields/DDD_Outlet_ID__c.field-meta.xml
<CustomField>
    <fullName>DDD_Outlet_ID__c</fullName>
    <label>DDD Outlet ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>