Production/force-app/main/default/objects/Sales_Planner_History__c/fields/Issues_Objections_Limitations__c.field-meta.xml
<CustomField>
    <fullName>Issues_Objections_Limitations__c</fullName>
    <label>Key Issues/Constraints:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>