Production/force-app/main/default/objects/Sales_Planner_History__c/fields/Last_IMS_Sales_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_IMS_Sales_Activity_Date__c</fullName>
    <label>Last IMS Sales Activity Date</label>
    <type>Date</type>
</CustomField>