Production/force-app/main/default/objects/Sales_Planner_History__c/fields/Paxvax_Classification__c.field-meta.xml
<CustomField>
    <fullName>Paxvax_Classification__c</fullName>
    <label>Paxvax Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>