Production/force-app/main/default/objects/Sales_Planner_History__c/fields/Personal_Note__c.field-meta.xml
<CustomField>
    <fullName>Personal_Note__c</fullName>
    <label>Personal Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>