Production/force-app/main/default/objects/Sales_Planner_History__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>