Production/force-app/main/default/objects/Sales_Planner_History__c/fields/Sales_Planner_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Planner_Id__c</fullName>
    <label>Old Sales Planner Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>