Production/force-app/main/default/objects/Sales_Planner_History__c/fields/Sales_Planner_Year__c.field-meta.xml
<CustomField>
    <fullName>Sales_Planner_Year__c</fullName>
    <label>Sales Planner Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>