Production/force-app/main/default/objects/Sales_Planner_History__c/fields/State_Province3__c.field-meta.xml
<CustomField>
    <fullName>State_Province3__c</fullName>
    <label>State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>