Production/force-app/main/default/objects/Sales_Planner_History__c/fields/Street3__c.field-meta.xml
<CustomField>
    <fullName>Street3__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>