Production/force-app/main/default/objects/Sales_Planner_History__c/fields/Total_F2F_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Total_F2F_Meetings__c</fullName>
    <label>2019 Total F2F Meetings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>