Production/force-app/main/default/objects/Sales_Planner_History__c/fields/Vaxchora_Doses_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Vaxchora_Doses_Commitment__c</fullName>
    <description>2019 Pricing Program</description>
    <inlineHelpText>Based on signed contract</inlineHelpText>
    <label>Vaxchora Doses Commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>