Production/force-app/main/default/objects/Sales_Planner_History__c/fields/Vaxchora_Ordered_Doses__c.field-meta.xml
<CustomField>
    <fullName>Vaxchora_Ordered_Doses__c</fullName>
    <description>2019 Pricing Program</description>
    <inlineHelpText>Based on daily sales report.</inlineHelpText>
    <label>Vaxchora Ordered Doses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>