Production/force-app/main/default/objects/Sales_Planner_History__c/fields/Vivotif_Growth_YOY_YTD__c.field-meta.xml
<CustomField>
    <fullName>Vivotif_Growth_YOY_YTD__c</fullName>
    <label>YTD YOY Vivotif Growth(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>