Production/force-app/main/default/objects/Sales_Planner_History__c/fields/X1H_Vivotif_Goal__c.field-meta.xml
<CustomField>
    <fullName>X1H_Vivotif_Goal__c</fullName>
    <inlineHelpText>Jan-Jun 2018 Vivotif doses growth by 5%</inlineHelpText>
    <label>1H Vivotif Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>