Production/force-app/main/default/objects/Sales_Planner_History__c/fields/X2018_Vaxchora_doses__c.field-meta.xml
<CustomField>
    <fullName>X2018_Vaxchora_doses__c</fullName>
    <label>2018 Vaxchora doses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>