Production/force-app/main/default/objects/Sales_Planner_History__c/fields/X2019_TotalActivities__c.field-meta.xml
<CustomField>
    <fullName>X2019_TotalActivities__c</fullName>
    <label>2019 Total  Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>