Production/force-app/main/default/objects/Sales_Planner_History__c/fields/X2H_Actual_Vivotif_Doses__c.field-meta.xml
<CustomField>
    <fullName>X2H_Actual_Vivotif_Doses__c</fullName>
    <label>2H- Actual Vivotif Doses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>