Production/force-app/main/default/objects/Sales_Planner_History__c/fields/X2H_Vivotif_Goal__c.field-meta.xml
<CustomField>
    <fullName>X2H_Vivotif_Goal__c</fullName>
    <inlineHelpText>Jul-Dec 2018 Vivotif Doses growth by 5%</inlineHelpText>
    <label>2H Vivotif Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>