Production/force-app/main/default/objects/Sales_Planner_History__c/fields/Zip_Postal_Code3__c.field-meta.xml
<CustomField>
    <fullName>Zip_Postal_Code3__c</fullName>
    <label>Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>